hover effect on buttons stopped working bc of animation argh, but maybe they'll work on firefox now

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -314,7 +314,7 @@ body {
     right: 10%;
     p:hover,
     a:hover {
-        opacity: .5;
+        opacity: .5 !important;
     }
     @include mobile {
         position: static;
